--- a/SE-CWA2020ASN1-Prog/SE-CWA2020ASN1-Prog.csproj
+++ b/SE-CWA2020ASN1-Prog/SE-CWA2020ASN1-Prog.csproj
@@ -60,6 +60,12 @@
     </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SafetyInspection.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="SafetyInspection.Designer.cs">
+      <DependentUpon>SafetyInspection.cs</DependentUpon>
+    </Compile>
     <EmbeddedResource Include="ActionComments.resx">
       <DependentUpon>ActionComments.cs</DependentUpon>
     </EmbeddedResource>
@@ -75,6 +81,9 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="SafetyInspection.resx">
+      <DependentUpon>SafetyInspection.cs</DependentUpon>
+    </EmbeddedResource>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
