Added inspection classes and action nav buttons between forms

--- a/SE-CWA2020ASN1-Prog/SE-CWA2020ASN1-Prog.csproj
+++ b/SE-CWA2020ASN1-Prog/SE-CWA2020ASN1-Prog.csproj
@@ -58,6 +58,7 @@
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
+    <Compile Include="Inspection.cs" />
     <Compile Include="InspectionSubmission.cs">
       <SubType>Form</SubType>
     </Compile>
