--- a/SE-CWA2020ASN1-Prog/SE-CWA2020ASN1-Prog.csproj
+++ b/SE-CWA2020ASN1-Prog/SE-CWA2020ASN1-Prog.csproj
@@ -65,11 +65,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="AboutBox.cs">
+    <Compile Include="AboutMusk.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="AboutBox.Designer.cs">
-      <DependentUpon>AboutBox.cs</DependentUpon>
+    <Compile Include="AboutMusk.Designer.cs">
+      <DependentUpon>AboutMusk.cs</DependentUpon>
     </Compile>
     <Compile Include="ActionComments.cs">
       <SubType>Form</SubType>
@@ -101,8 +101,8 @@
       <DependentUpon>SafetyInspection.cs</DependentUpon>
     </Compile>
     <Compile Include="SQLiteCon.cs" />
-    <EmbeddedResource Include="AboutBox.resx">
-      <DependentUpon>AboutBox.cs</DependentUpon>
+    <EmbeddedResource Include="AboutMusk.resx">
+      <DependentUpon>AboutMusk.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="ActionComments.resx">
       <DependentUpon>ActionComments.cs</DependentUpon>
