--- a/SE-CWA2020ASN1-Prog/SE-CWA2020ASN1-Prog.csproj
+++ b/SE-CWA2020ASN1-Prog/SE-CWA2020ASN1-Prog.csproj
@@ -12,6 +12,8 @@
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
     <Deterministic>true</Deterministic>
+    <NuGetPackageImportStamp>
+    </NuGetPackageImportStamp>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
@@ -58,6 +60,8 @@
     <Compile Include="ActionComments.Designer.cs">
       <DependentUpon>ActionComments.cs</DependentUpon>
     </Compile>
+    <Compile Include="BusinessMetaLayer.cs" />
+    <Compile Include="DbFactory.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -65,12 +69,14 @@
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
     <Compile Include="Inspection.cs" />
+    <Compile Include="InspectionArea.cs" />
     <Compile Include="InspectionSubmission.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="InspectionSubmission.Designer.cs">
       <DependentUpon>InspectionSubmission.cs</DependentUpon>
     </Compile>
+    <Compile Include="Intervention.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SafetyInspection.cs">
@@ -79,6 +85,7 @@
     <Compile Include="SafetyInspection.Designer.cs">
       <DependentUpon>SafetyInspection.cs</DependentUpon>
     </Compile>
+    <Compile Include="SQLiteCon.cs" />
     <EmbeddedResource Include="AboutMusk.resx">
       <DependentUpon>AboutMusk.cs</DependentUpon>
     </EmbeddedResource>
@@ -117,7 +124,26 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <PackageReference Include="EntityFramework">
+      <Version>6.4.4</Version>
+    </PackageReference>
+    <PackageReference Include="Stub.System.Data.SQLite.Core.NetFramework">
+      <Version>1.0.115</Version>
+    </PackageReference>
+    <PackageReference Include="System.Data.SQLite">
+      <Version>1.0.115</Version>
+    </PackageReference>
+    <PackageReference Include="System.Data.SQLite.Core">
+      <Version>1.0.115</Version>
+    </PackageReference>
+    <PackageReference Include="System.Data.SQLite.EF6">
+      <Version>1.0.115</Version>
+    </PackageReference>
+    <PackageReference Include="System.Data.SQLite.Linq">
+      <Version>1.0.115</Version>
+    </PackageReference>
+  </ItemGroup>
   <ItemGroup>
     <Content Include="Resources\musk-logo.jpg" />
     <None Include="Resources\Planet9.jpg" />
