--- a/SE-CWA2020ASN1-Prog/SE-CWA2020ASN1-Prog.csproj
+++ b/SE-CWA2020ASN1-Prog/SE-CWA2020ASN1-Prog.csproj
@@ -65,12 +65,14 @@
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
     <Compile Include="Inspection.cs" />
+    <Compile Include="InspectionArea.cs" />
     <Compile Include="InspectionSubmission.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="InspectionSubmission.Designer.cs">
       <DependentUpon>InspectionSubmission.cs</DependentUpon>
     </Compile>
+    <Compile Include="Intervention.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SafetyInspection.cs">
