--- a/SE-CWA2020ASN1-Prog/SE-CWA2020ASN1-Prog.csproj
+++ b/SE-CWA2020ASN1-Prog/SE-CWA2020ASN1-Prog.csproj
@@ -52,11 +52,11 @@
     <Compile Include="AboutMusk.Designer.cs">
       <DependentUpon>AboutMusk.cs</DependentUpon>
     </Compile>
-    <Compile Include="ActionComments.cs">
+    <Compile Include="ActionComments3.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="ActionComments.Designer.cs">
-      <DependentUpon>ActionComments.cs</DependentUpon>
+    <Compile Include="ActionComments3.Designer.cs">
+      <DependentUpon>ActionComments3.cs</DependentUpon>
     </Compile>
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
@@ -66,32 +66,33 @@
     </Compile>
     <Compile Include="Inspection.cs" />
     <Compile Include="InspectionArea.cs" />
-    <Compile Include="InspectionSubmission.cs">
+    <Compile Include="InspectionSubmission2.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="InspectionSubmission.Designer.cs">
-      <DependentUpon>InspectionSubmission.cs</DependentUpon>
+    <Compile Include="InspectionSubmission2.Designer.cs">
+      <DependentUpon>InspectionSubmission2.cs</DependentUpon>
     </Compile>
+    <Compile Include="Methods.cs" />
     <Compile Include="Intervention.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="SafetyInspection.cs">
+    <Compile Include="SafetyInspection1.cs">
       <SubType>Form</SubType>
     </Compile>
-    <Compile Include="SafetyInspection.Designer.cs">
-      <DependentUpon>SafetyInspection.cs</DependentUpon>
+    <Compile Include="SafetyInspection1.Designer.cs">
+      <DependentUpon>SafetyInspection1.cs</DependentUpon>
     </Compile>
     <EmbeddedResource Include="AboutMusk.resx">
       <DependentUpon>AboutMusk.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="ActionComments.resx">
-      <DependentUpon>ActionComments.cs</DependentUpon>
+    <EmbeddedResource Include="ActionComments3.resx">
+      <DependentUpon>ActionComments3.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
-    <EmbeddedResource Include="InspectionSubmission.resx">
-      <DependentUpon>InspectionSubmission.cs</DependentUpon>
+    <EmbeddedResource Include="InspectionSubmission2.resx">
+      <DependentUpon>InspectionSubmission2.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
@@ -103,8 +104,8 @@
       <DependentUpon>Resources.resx</DependentUpon>
       <DesignTime>True</DesignTime>
     </Compile>
-    <EmbeddedResource Include="SafetyInspection.resx">
-      <DependentUpon>SafetyInspection.cs</DependentUpon>
+    <EmbeddedResource Include="SafetyInspection1.resx">
+      <DependentUpon>SafetyInspection1.cs</DependentUpon>
     </EmbeddedResource>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
