--- a/SE-CWA2020ASN1-Prog/SE-CWA2020ASN1-Prog.csproj
+++ b/SE-CWA2020ASN1-Prog/SE-CWA2020ASN1-Prog.csproj
@@ -59,7 +59,7 @@
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
     <Compile Include="Inspection.cs" />
-    <Compile Include="InspectionArea.cs" />
+    <Compile Include="WorkArea.cs" />
     <Compile Include="InspectionSubmission2.cs">
       <SubType>Form</SubType>
     </Compile>
