--- a/SE-CWA2020ASN1-Prog/packages.config
+++ b/SE-CWA2020ASN1-Prog/packages.config
@@ -2,7 +2,9 @@
 <packages>
   <package id="OpenCvSharp4" version="4.5.3.20210817" targetFramework="net472" />
   <package id="OpenCvSharp4.runtime.win" version="4.5.3.20210817" targetFramework="net472" />
+  <package id="Stub.System.Data.SQLite.Core.NetFramework" version="1.0.115.5" targetFramework="net472" />
   <package id="System.Buffers" version="4.5.1" targetFramework="net472" />
+  <package id="System.Data.SQLite.Core" version="1.0.115.5" targetFramework="net472" />
   <package id="System.Drawing.Common" version="5.0.2" targetFramework="net472" />
   <package id="System.Memory" version="4.5.4" targetFramework="net472" />
   <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net472" />
