--- a/SE-CWA2020ASN1-Prog/SE-CWA2020ASN1-Prog.csproj
+++ b/SE-CWA2020ASN1-Prog/SE-CWA2020ASN1-Prog.csproj
@@ -96,6 +96,7 @@
       <DependentUpon>ImageCapture.cs</DependentUpon>
     </Compile>
     <Compile Include="Inspection.cs" />
+    <Compile Include="Pdf.cs" />
     <Compile Include="WorkArea.cs" />
     <Compile Include="InspectionSubmission2.cs">
       <SubType>Form</SubType>
