--- a/InspectionTesting/packages.config
+++ b/InspectionTesting/packages.config
@@ -3,4 +3,6 @@
   <package id="Aspose.HTML" version="21.11.0" targetFramework="net472" />
   <package id="MSTest.TestAdapter" version="2.1.1" targetFramework="net472" />
   <package id="MSTest.TestFramework" version="2.1.1" targetFramework="net472" />
+  <package id="Stub.System.Data.SQLite.Core.NetFramework" version="1.0.115.5" targetFramework="net472" />
+  <package id="System.Data.SQLite.Core" version="1.0.115.5" targetFramework="net472" />
 </packages>
