--- a/SE-CWA2020ASN1-Prog/packages.config
+++ b/SE-CWA2020ASN1-Prog/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Aspose.HTML" version="21.12.0" targetFramework="net472" />
   <package id="EntityFramework" version="6.4.4" targetFramework="net472" />
   <package id="OpenCvSharp4" version="4.5.3.20210817" targetFramework="net472" />
   <package id="OpenCvSharp4.runtime.win" version="4.5.3.20210817" targetFramework="net472" />
